--- a/Exploring_NumPy_Operations.ipynb
+++ b/Exploring_NumPy_Operations.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iE5Np1KEx3NR",
-        "outputId": "f58d8734-b585-4eb3-bf9c-4268c9b05ff9"
+        "outputId": "07d06488-91f3-4b33-8354-425f98f2f75c"
       },
       "outputs": [
         {
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2WsDRGY5yCbo",
-        "outputId": "8d950b88-05c4-40c5-832e-f21ca30a715b"
+        "outputId": "d5350fc5-2526-4aa1-9600-abd702a02171"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ktAG8NCayGZf",
-        "outputId": "42bfca44-0dd5-49bb-a3aa-45bde82edb38"
+        "outputId": "3e891646-03dc-4863-8e58-3ebf5d256637"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
     {
       "cell_type": "code",
       "source": [
-        "myName=\"Ivan\"\n",
+        "myName=\"DavidAndrade\"\n",
         "print(myName)\n",
         "print(myName.upper())\n",
         "print(myName.lower())"
@@ -117,17 +117,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Uk48-EbyZxY",
-        "outputId": "cd57ff04-6996-43cb-f928-3e1d0fc16a43"
+        "outputId": "22a936af-d1c7-4046-b109-62b9c3d0cf0a"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ivan\n",
-            "IVAN\n",
-            "ivan\n"
+            "DavidAndrade\n",
+            "DAVIDANDRADE\n",
+            "davidandrade\n"
           ]
         }
       ]
@@ -135,7 +135,7 @@
     {
       "cell_type": "code",
       "source": [
-        "tmp='ivan ; hamilton ; Yair'\n",
+        "tmp='David ; Andrade ; Farias'\n",
         "print(tmp)\n",
         "print(tmp.split(';'))"
       ],
@@ -144,16 +144,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ZodPXAGyeR7",
-        "outputId": "7d680eec-8827-477d-a06f-e0d39753096b"
+        "outputId": "1536d9dc-d1ae-4054-fc0b-ac3ddca6041c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ivan ; hamilton ; Yair\n",
-            "['ivan ', ' hamilton ', ' Yair']\n"
+            "David ; Andrade ; Farias\n",
+            "['David ', ' Andrade ', ' Farias']\n"
           ]
         }
       ]
@@ -172,9 +172,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-Nutd9WylmB",
-        "outputId": "ce2a8f8d-c95c-4cf9-dace-f1155224ac99"
+        "outputId": "f2e94063-a9ad-476a-dffe-20455df84cfa"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,9 +199,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGRloBgByoFr",
-        "outputId": "656c4296-1b57-4dfa-cd8b-00cb034cb859"
+        "outputId": "452d3842-2799-4da2-a3b4-510c11581f1f"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "KqpHt61myqSy"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     }
   ]
